"Order Service search filter fixed"